<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_2"
    android:orientation="vertical"
    tools:context=".activities.RegistroActivity">

    <ImageView
        android:id="@+id/imgMenuRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/ic_keyboard"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_gravity="center">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imgPerfil"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:civ_border_color="#DD129A"
            app:civ_border_width="1dp"
            app:civ_shadow="true"
            android:src="@drawable/ic_camera"
            app:civ_shadow_radius="10"
            app:civ_shadow_color="#1B80FA"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtRegistro"
            android:textColor="@color/colorBlanco"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="35dp"
        android:orientation="vertical"
        android:layout_marginRight="35dp">

        <EditText
            android:id="@+id/eTNombreRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_9"
            android:paddingLeft="9dp"
            android:drawablePadding="6dp"
            android:cursorVisible="true"
            android:maxLength="15"
            android:singleLine="true"
            android:hint="@string/txtNombre"/>

        <EditText
            android:id="@+id/eTApellidoPaternoRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_9"
            android:paddingLeft="9dp"
            android:drawablePadding="6dp"
            android:cursorVisible="true"
            android:maxLength="15"
            android:singleLine="true"
            android:hint="@string/txtApellidoPaterno"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/eTApellidoMaternoRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_9"
            android:paddingLeft="9dp"
            android:drawablePadding="6dp"
            android:cursorVisible="true"
            android:maxLength="15"
            android:singleLine="true"
            android:hint="@string/txtApellidoMaterno"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/eTCorreoRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_9"
            android:paddingLeft="9dp"
            android:drawablePadding="6dp"
            android:cursorVisible="true"
            android:maxLength="25"
            android:singleLine="true"
            android:hint="@string/txtCorreo"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/eTContraseniaRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_9"
            android:paddingLeft="9dp"
            android:drawablePadding="6dp"
            android:cursorVisible="true"
            android:maxLength="15"
            android:singleLine="true"
            android:hint="@string/txt_Contraseña"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/eTContraseniaRegistroVerificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_9"
            android:paddingLeft="9dp"
            android:drawablePadding="6dp"
            android:cursorVisible="true"
            android:maxLength="15"
            android:singleLine="true"
            android:hint="@string/txt_RecuperarContraseña"
            android:layout_marginTop="10dp"/>


        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtRegistrarme"
            android:background="@drawable/rectangle_4"
            android:textColor="@color/colorLetra"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textAllCaps="false"/>


    </LinearLayout>


   <TextView
       android:id="@+id/tVSesion"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/txt_IniciarSesion"
       android:textColor="@color/colorBlanco"
       android:layout_gravity="center"
       android:layout_marginTop="30dp"
       android:gravity="center"/>


</LinearLayout>