<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">

    <RelativeLayout
        android:id="@+id/rlAddTask"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:elevation="10dp"
        android:layout_margin="10dp"
        android:background="@android:color/white">

        <EditText
            android:id="@+id/etTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_hint"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/btnAddTask"/>

        <Button
            android:id="@+id/btnAddTask"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorBlanco"
            android:text="@string/btn_add"/>

        <TextView
            android:id="@+id/etFecha"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:hint="@string/add_fecha"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etTask"
            android:layout_toStartOf="@+id/btnAddTask"/>


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNotas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlAddTask"/>

</RelativeLayout>