<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash1"
    android:orientation="vertical"
    tools:context=".activities.RecuperarContraActivity">

    <ImageView
        android:id="@+id/imgMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/ic_keyboard"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/border"
            android:layout_marginTop="40dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <EditText
            android:id="@+id/eTRecuperarContraseña"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_9"
            android:drawableLeft="@drawable/fill_1"
            android:paddingLeft="9dp"
            android:cursorVisible="true"
            android:maxLength="30"
            android:hint="@string/txtEmail"
            android:singleLine="true"
            android:drawablePadding="6dp"/>

        <Button
            android:id="@+id/btnRecuperarContraseña"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_41"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorBlanco"
            android:textAllCaps="false"
            android:text="@string/txt_RecuperarContraseña"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:layout_marginTop="190dp">

        <TextView
            android:id="@+id/tVIniciarSesion"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/txt_IniciarSesion"
            android:textColor="@color/colorBlanco"
            android:paddingLeft="20dp"/>

        <TextView
            android:id="@+id/tVRegistro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="right"
            android:text="@string/txtRegistrarme"
            android:textColor="@color/colorBlanco"
            android:paddingRight="20dp"/>
    </LinearLayout>

</LinearLayout>