<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/splash_2"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imgMenuFirma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/ic_keyboard"/>

    <LinearLayout
        android:id="@+id/contentHubicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

       <ImageView
           android:id="@+id/imgLocatio"
           android:layout_width="60dp"
           android:layout_height="45dp"
           android:src="@drawable/ic_location"/>

        <TextView
            android:id="@+id/tVLocation"
            android:hint="@string/txt_geo"
            android:layout_height="25dp"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="@color/colorBlanco"
            android:textColorHint="@color/colorBlanco"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/contentHubicacion">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/borderfirma"
                android:id="@+id/signature_pad_container"
                android:layout_weight="1">

                <FrameLayout
                    android:layout_alignParentBottom="true"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

                <com.github.gcacace.signaturepad.views.SignaturePad
                    android:id="@+id/signaturePad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:penColor="@android:color/black" />

                <TextView
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txtNombreEmpleado"
                    android:layout_alignParentBottom="true"
                    android:textSize="17sp"/>
            </RelativeLayout>


            <LinearLayout
                android:layout_weight="0"
                android:id="@+id/buttons_container"
                android:paddingTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/mClearButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_4"
                    android:textColor="@color/colorLetra"
                    android:layout_weight="1"
                    android:text="@string/txtFirmaLimpiar"
                    android:layout_marginRight="10dp"
                    android:enabled="false" />

                <Button
                    android:id="@+id/mSaveButton"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_4"
                    android:textColor="@color/colorLetra"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/txtFirmaGuadar"
                    android:enabled="false" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>