<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash1"
    android:orientation="vertical"
    tools:context=".activities.MenuActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/btnSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_sesion"
            android:textAllCaps="false"
            android:textColor="@color/colorBlanco"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/invalid_name"
            android:padding="10dp"
            android:drawablePadding="5dp"
            android:background="@drawable/rectangulo"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="55dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/LisReportes"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/bordermenu">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/not"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/colorBlanco"
                    android:text="@string/txtNotas"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LiFirma"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bordermenu">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/fir"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/colorBlanco"
                    android:text="@string/txtFirma"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/LiProductos"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/bordermenu">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/aur"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/colorBlanco"
                    android:text="@string/txtProductos"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LiPerfil"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bordermenu">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/usr"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlanco"
                    android:gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/txtPerlfil"/>
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/tVNombreM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlanco"
            android:fontFamily="sans-serif-condensed-light"/>

    </LinearLayout>


</LinearLayout>